--- a/notebooks/mlp_mnist_simple.ipynb
+++ b/notebooks/mlp_mnist_simple.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -24,9 +22,9 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import tensorflow as tf\n",
+    "# import tensorflow as tf\n",
+    "import tensorflow.compat.v1 as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
     "%matplotlib inline  \n",
     "print (\"PACKAGES LOADED\")"
    ]
@@ -41,23 +39,60 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OnehotEncoding(target):\n",
+    "    from sklearn.preprocessing import OneHotEncoder\n",
+    "    target_re = target.reshape(-1,1)\n",
+    "    enc = OneHotEncoder()\n",
+    "    enc.fit(target_re)\n",
+    "    return enc.transform(target_re).toarray()\n",
+    "\n",
+    "def SuffleWithNumpy(data_x, data_y):\n",
+    "    idx = np.random.permutation(len(data_x))\n",
+    "    x,y = data_x[idx], data_y[idx]\n",
+    "    return x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting data/train-images-idx3-ubyte.gz\n",
-      "Extracting data/train-labels-idx1-ubyte.gz\n",
-      "Extracting data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting data/t10k-labels-idx1-ubyte.gz\n"
+      "Download and Extract MNIST dataset\n",
+      " tpye of 'mnist' is <class 'tensorflow.python.util.module_wrapper.TFModuleWrapper'>\n",
+      " number of train data is 60000\n",
+      " number of test data is 10000\n",
+      "MNIST loaded\n"
      ]
     }
    ],
    "source": [
-    "mnist = input_data.read_data_sets('data/', one_hot=True)"
+    "print (\"Download and Extract MNIST dataset\")\n",
+    "# mnist = input_data.read_data_sets('data/', one_hot=True)\n",
+    "mnist = tf.keras.datasets.mnist\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+    "\n",
+    "print\n",
+    "print (\" tpye of 'mnist' is %s\" % (type(mnist)))\n",
+    "print (\" number of train data is %d\" % (len(x_train)))\n",
+    "print (\" number of test data is %d\" % (len(x_test)))\n",
+    "num_train_data = len(x_train)\n",
+    "trainimg   = x_train\n",
+    "trainimg = trainimg.reshape(len(trainimg),784)\n",
+    "trainlabel = OnehotEncoding(y_train)\n",
+    "testimg    = x_test\n",
+    "testimg = testimg.reshape(len(testimg),784)\n",
+    "testlabel  = OnehotEncoding(y_test)\n",
+    "print (\"MNIST loaded\")\n",
+    "tf.disable_eager_execution()"
    ]
   },
   {
@@ -69,10 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -117,10 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def multilayer_perceptron(_X, _weights, _biases):\n",
@@ -138,10 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -156,14 +185,14 @@
     "pred = multilayer_perceptron(x, weights, biases)\n",
     "\n",
     "# LOSS AND OPTIMIZER\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) \n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=pred,labels= y)) \n",
     "# optm = tf.train.GradientDescentOptimizer(learning_rate=0.001).minimize(cost) \n",
     "optm = tf.train.AdamOptimizer(learning_rate=0.001).minimize(cost) \n",
     "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
     "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
     "\n",
     "# INITIALIZER\n",
-    "init = tf.initialize_all_variables()\n",
+    "init = tf.global_variables_initializer()\n",
     "print (\"FUNCTIONS READY\")"
    ]
   },
@@ -176,9 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -186,21 +214,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 003/020 cost: 0.124787590\n",
-      "TRAIN ACCURACY: 0.960\n",
-      "TEST ACCURACY: 0.961\n",
-      "Epoch: 007/020 cost: 0.050386614\n",
-      "TRAIN ACCURACY: 0.970\n",
-      "TEST ACCURACY: 0.975\n",
-      "Epoch: 011/020 cost: 0.019682230\n",
+      "Epoch: 003/020 cost: 0.116514339\n",
+      "TRAIN ACCURACY: 0.990\n",
+      "TEST ACCURACY: 0.966\n",
+      "Epoch: 007/020 cost: 0.044108750\n",
+      "TRAIN ACCURACY: 0.990\n",
+      "TEST ACCURACY: 0.976\n",
+      "Epoch: 011/020 cost: 0.017314874\n",
       "TRAIN ACCURACY: 1.000\n",
       "TEST ACCURACY: 0.979\n",
-      "Epoch: 015/020 cost: 0.007102341\n",
+      "Epoch: 015/020 cost: 0.006136829\n",
       "TRAIN ACCURACY: 1.000\n",
-      "TEST ACCURACY: 0.979\n",
-      "Epoch: 019/020 cost: 0.002848990\n",
+      "TEST ACCURACY: 0.981\n",
+      "Epoch: 019/020 cost: 0.002604427\n",
       "TRAIN ACCURACY: 1.000\n",
-      "TEST ACCURACY: 0.979\n",
+      "TEST ACCURACY: 0.981\n",
       "OPTIMIZATION FINISHED\n"
      ]
     }
@@ -216,10 +244,12 @@
     "# OPTIMIZE\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0.\n",
-    "    total_batch = int(mnist.train.num_examples/batch_size)\n",
+    "    total_batch = int(num_train_data/batch_size)\n",
     "    # ITERATION\n",
     "    for i in range(total_batch):\n",
-    "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
+    "        batch_xs=trainimg[i*batch_size:(i+1)*batch_size]\n",
+    "        batch_ys=trainlabel[i*batch_size:(i+1)*batch_size]\n",
+    "        \n",
     "        feeds = {x: batch_xs, y: batch_ys}\n",
     "        sess.run(optm, feed_dict=feeds)\n",
     "        avg_cost += sess.run(cost, feed_dict=feeds)\n",
@@ -230,32 +260,53 @@
     "        feeds = {x: batch_xs, y: batch_ys}\n",
     "        train_acc = sess.run(accr, feed_dict=feeds)\n",
     "        print (\"TRAIN ACCURACY: %.3f\" % (train_acc))\n",
-    "        feeds = {x: mnist.test.images, y: mnist.test.labels}\n",
+    "        feeds = {x: testimg, y: testlabel}\n",
     "        test_acc = sess.run(accr, feed_dict=feeds)\n",
     "        print (\"TEST ACCURACY: %.3f\" % (test_acc))\n",
+    "    trainimg,trainlabel = SuffleWithNumpy(trainimg,trainlabel)\n",
     "print (\"OPTIMIZATION FINISHED\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
